# parcel

crates/core/: Cargo.toml
crates/core/src/: config.rs  diagnostic_error.rs  fs.rs  lib.rs  main.rs  package_manager.rs  parcel_config.rs
crates/core/src/config/: mod.rs  parcel_config.rs  parcel_config_fixtures.rs  parcel_rc.rs  parcel_rc_config.rs  partial_parcel_config.rs  pipeline.rs  plugin.rs
crates/core/src/diagnostic/: diagnostic_error.rs  mod.rs
crates/core/src/fs/: file_system.rs  local_file_system.rs  memory_file_system.rs  memory_fs.rs  mod.rs  node_file_system.rs
crates/core/src/package_manager/: mod.rs  node_package_manager.rs  package_manager.rs
crates/macros/: Cargo.toml
crates/node-bindings/: Cargo.toml
crates/node-bindings/src/: core.rs  fs_search.rs  lib.rs  parcel_config.rs
crates/parcel_filesystem/: Cargo.toml
crates/parcel_napi_helpers/: Cargo.toml
