[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "parcel-core"
version = "0.1.0"
edition = "2021"

[dependencies]
glob-match = "0.2.1"
indexmap = { version = "2.2.6", features = ["serde", "std"] }
mockall = "0.12.1"
oxc_resolver = "1.7.0"
pathdiff = "0.2.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json5 = "0.1.0"
